# Robothon2023

./: .gitignore  README.md
robothon2023_cell/: README.md
robothon2023_cell/robothon2023_description/: CMakeLists.txt  package.xml
robothon2023_cell/robothon2023_description/launch/: bagplay.launch  bagplay_eut.launch  log.launch  test.launch  upload.launch  ur10e_upload.launch
robothon2023_cell/robothon2023_description/urdf/: robothon2023.xacro  robothon2023_simplified.xacro  sharework_cell.urdf.xacro
robothon2023_images/: doorOpeningBT
robothon2023_tree/: CMakeLists.txt  README.md  package.xml
robothon2023_tree/config/: TF_params.yaml  cable_positioning.yaml  cable_winding.yaml  door_opening.yaml  example.yaml  identification.yaml  identification_test.yaml  init.yaml  init_transferability.yaml  press_button.yaml  probe_testing.yaml  slider.yaml  square.yaml  transferability.yaml  transferability_TF_params.yaml  transferability_cable_insertion.yaml  transferability_init.yaml  transferability_test_probe.yaml
robothon2023_tree/launch/: load_params.launch  run_all.launch  run_blue_button.launch  run_cable_positioning.launch  run_cable_winding.launch  run_door.launch  run_identification_test.launch  run_init.launch  run_probe.launch  run_slider.launch  run_transferability_cable_insertion.launch  run_transferability_demo.launch  run_transferability_init.launch  run_transferability_resistance_test.launch  run_tree.launch  tranferability_tf.launch  transferability_load_params.launch  transferability_tf.launch
robothon2023_tree/src/: run_tree.cpp
robothon2023_tree/tree/: all_task.xml  cable.xml  cable_positioning.xml  cable_winding.xml  door_opening.xml  ident_test.xml  init.xml  press_blue_button.xml  press_red_button.xml  probe_testing.xml  root.xml  root.xml.backup  slider.xml  square.xml  tranferability_demo_all.xml  tranferability_init.xml  transferability_cable_insertion.xml  transferability_demo.xml  transferability_init.xml  transferability_test_resistance.xml
robothon2023_tree/ur_script/: force_direction.script  general_movej.script  multi_waypoint.script  ur_circular_move.script  ur_force_linear_move_tool.script  ur_linear_move_base.script  ur_linear_move_tool.script  ur_load_program_and_replace.script  ur_movej.script  ur_movej_.script  ur_script.script  ur_simple_touch_base.script  ur_simple_touch_tool.script
robothon2023_vision/: CMakeLists.txt  (+4 more)
(+407 files in other folders)
