<?xml version="1.0"?>
<package format="2">
  <name>robothon2023_tree</name>
  <version>0.0.0</version>
  <description>The robothon2023_tree package</description>

  <maintainer email="gauss@todo.todo">gauss</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>skills_util</depend>
  <depend>skills_util_msgs</depend>
  <depend>tf</depend>
  <!-- <depend>behaviortree_cpp</depend> -->

  <export>

  </export>
</package>
