<?xml version="1.0"?>
<package format="2">
  <name>robothon2023_description</name>
  <version>0.0.0</version>
  <description>The robothon2023_description package</description>

  <maintainer email="gauss@todo.todo">gauss</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robotiq_2f_85_gripper_visualization</depend>
  <depend>ur_description</depend>
  <depend>realsense2_description</depend>
  <depend>ur10e_robotiq_simplified_description</depend>
  <depend>agni_tf_tools</depend>

  <export>
  </export>
</package>
